# sudoku

./: CMakeLists.txt
src/: indexing.h  rules.h  solver.h  sudoku.h  utils.h
test/: CMakeLists.txt  test_basic_board_fn.cpp  test_indexing.cpp  test_rules.cpp  test_solver.cpp  test_utils.cpp
test/boards/: board0.txt  board1.txt  board2.txt  board3.txt  board4.txt  board5.txt
